--- a/los_post_github.css
+++ b/los_post_github.css
@@ -179,4 +179,4 @@ div.border:before {
     height: 100%; width: 100%;
     box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
 }
-/*dsdsds Prueba con github*/
+/*dsdsds Prueba con github DOZ*/
