--- a/los_post_github.css
+++ b/los_post_github.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-/*///SEPARADOR CABEZA SECCIONES///*/
+/*///SEPARADOR CABEZA SECCIONES  dsdsds///*/
 .cabeza_secciones{
 	background-color:#007DD9;
 	height:34px;
@@ -179,4 +179,4 @@ div.border:before {
     height: 100%; width: 100%;
     box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
 }
-/*dsdsds Prueba con github  sdf*/
+/*dsdsds Prueba con github  sdf TREZsd*/
