--- a/los_post_github.css
+++ b/los_post_github.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-/*///SEPARADOR CABEZA SECCIONESppppp///*/
+/*///SEPARADOR CABEZA SECCIONES///*/
 .cabeza_secciones{
 	background-color:#007DD9;
 	height:34px;
