--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Portabily
 Theme URI: http://www.portabily.com
-Author: A y B
+Author: Sikes & Piedrucci
 Author URI: http://www.portabily.com
 */
 
