--- a/css/los_post.css
+++ b/css/los_post.css
@@ -4,13 +4,14 @@
 /*///SEPARADOR CABEZA SECCIONES///*/
 .cabeza_secciones{
 	background-color:#007DD9;
-	height:34px;
-	width:688px;
+	height:28px;
+	width:706px;
 	padding:6px;
 	font-size:22px;
 	color:#FFF;
 	vertical-align:baseline;
 	margin-bottom:5px;
+	border-top: 4px solid #000; 
 	/*line-height:35px;*/
 }
 
@@ -27,62 +28,57 @@
 	/*background-color:#CCC;*/
 	width:1000px;
 	/*height:500px;*/
-	font-family:Arial, Helvetica, sans-serif;
+	/*font-family:Arial, Helvetica, sans-serif;*/
+
 }
 
 .conte_todos_post{ /*Contiene todos los post*/
 	float:left;
 	background-color:#EEE;
-	width:700px;
-	/*height:500px;*/
-	font-family:Arial, Helvetica, sans-serif;
+	width:718px;
+	/*font-family:Arial, Helvetica, sans-serif;*/
 	vertical-align:top;
-	/*-webkit-column-count: 2;
-	-moz-column-count: 2;
-	column-count: 2;*/
-	behavior: url('http://localhost/portabily.com/wp-content/themes/handcrafted-wp-theme-master/PIE.htc');
+	
 }
 
 .conte_el_post{
 	display:inline-block;
 	float:left;
-	background-color:#EEE;
+	position:relative;
+	/*background-color:#EEE;*/
 	width:350px;
 	height:360px;
-	/*max-width:352px;
-	min-width:340px;*/
-	/*height:auto;*/
-	vertical-align:top;
-	position:relative;
-	/*border-top-style:groove;*/
-	margin-bottom:4px;
+	margin-bottom:10px;
+	margin-left: 6px;
+	
 }
+
 
 .conte_el_post a{
 	text-decoration:none;
 	color:#000;
 	
 }
-
-.cuerpo_post{
-	margin:4px;
-	padding:6px;
-	/*border-left:solid 1px;
-	border-left-style:dotted;
-	border-left-color:#999;*/
-	height:auto;
-	height:340px;
-	background-color:#FFF;
-	border-top:6px solid #007DD9;
-	
-}
-
 .cabeza_post{
 	font-size:16px;
 	color:#000;
 	font-weight:bold;
 	padding:4px;
 	margin-bottom:2px;
+
+}
+
+.cuerpo_post{
+	margin:4px 3px 4px 4px;
+	padding:6px;
+	/*border-left:solid 1px;
+	border-left-style:dotted;
+	border-left-color:#999;*/
+	height:340px;
+	background-color:#FFF;
+	border-top:6px solid #CCC;
+	/*border:1px solid #EEE;*/
+	
 }
 
 .imagen_post{
@@ -96,14 +92,14 @@
 	height:20px;
 	background-color:#007DD9;
 	position:absolute;
-	float:left !important;
 	display:inline-block;
-	font-family:Arial, Helvetica, sans-serif;
-	padding:3px;
-	border-top:4px solid #000;
+	/*font-family:Arial, Helvetica, sans-serif;*/
+	padding: 3px;
+	border-top: 4px solid #000;
 	right:10px;
-	-webkit-border-radius: px px 3px 3px;
-	border-radius: px px 3px 3px; 
+	-webkit-border-radius:0 0 3px 3px;
+	-moz-border-radius:0 0 3px 3px;
+	border-radius:0 0 3px 3px;
 	color:#FFF;
 	font-size:xx-small;
 	text-align:center;
@@ -122,6 +118,8 @@
 	height:auto;
 	width:330px;
 	word-wrap: break-word;
+	float: left;
+
 }
 
 .post_meta{
@@ -132,16 +130,49 @@
 
 
 .fracmento_post{
-	padding:4px;
+	padding:8px;
 	color:#000;
 	font-size:12px;
-	line-height:14px;
+	line-height:18px;
 	text-align: justify;
-	/*height:auto;*/
+	vertical-align:top;
+	margin-bottom: 5px;	
 }
 
+.foot_meta{
+
+	/*background-color: #D6D6D6;*/
+	height: 22px;
+	padding: 6px;
+	position: absolute;
+	width: 330px;
+	left: 4px;
+	vertical-align: bottom;
+	bottom: -2px;
+	border-top:1px solid  #E5E5E5;
+
+
+}
+.foot_meta tr{
+
+}
+
+
+.entry-content p{
+	padding:0;
+}
+
+
 .post_meta{
-	/*color:#000;*/
+	/*color:#000;
+	float: left;*/
+	
+}
+
+.entry-meta{
+	width: 320px;
+	float: left;
+	padding-left: 4px;
 }
 
 .imgc{
@@ -155,26 +186,106 @@
 }
 
 
+.social_list{
+
+	margin-top: 2px;
+	float:left;
+	width: auto;
+
+}
+
+.social_list ul {
+
+	margin: 0;
+	padding: 0;
+	font-size: 16px;
+}
+
+.social_list ul li{
+
+	display: inline;
+	list-style: none;
+	padding: 0;
+
+}
+
+.social_list a{
+	color:#6C6C6C;
+}
+
+.social_list ul li a:hover{
+	color:#007DD9;
+}
+
 /*///FIN LOS POST///*/
 
 /*///INICIO SIDEBAR///*/
-.contiene_wigged{
+.el_sidebar{
  	float:left;	
-	width:293px;
-	background-color:#930;
-	height:700px;
+	width:275px;
+	background-color:#FFF;
 	margin-left:6px;
+	padding-bottom:6px;
+	margin-bottom: 10px;
+
 }
 
-div.border {
-    border-left: 1px solid #000;
-    position: relative;
-   
+.el_sidebar a{
+	color: #000;
+	text-decoration: none;
 }
 
-div.border:before {
-    position: absolute; display: block; content: '';
-    border-left: 1px solid red;
-    height: 100%; width: 100%;
-    box-sizing: border-box; -moz-box-sizing: border-box; -webkit-box-sizing: border-box;
+.conte_sidebar{
+	padding-bottom: 4px;
+	height: auto;
+}
+
+.titulo_seccion{
+	background-color: #007DD9; 
+	font-size: 18px;
+	color:#FFF;
+	height: 30px;
+	padding: 10px 0px 0px 10px;
+	vertical-align: middle;
+	border-top: 4px solid #000; 
+}
+
+.post_comentado{
+	float: left;
+	width:275px;
+	height:130px;
+	background-color:#EEE;
+	border-bottom: 2px solid #FFF;
+
+}
+
+.contenido_comentado{
+	margin:9px;
+	/*padding:4px;*/
+	background-color:#FFF;
+	/*height:268px;*/
+}
+
+.img_comentado{
+	float: left;
+	height: 80px;
+	width: 80px;
+	background-color: #FFF;
+}
+
+.name_post{
+	float: left;
+	background-color:#FFF;
+	height:64px;
+	padding:8px;
+	width: 153px;
+}
+
+.foot_comentado{
+	clear: both;
+	padding: 6px;
+	color: #212121;
+	border-top: 1px solid #EEE;
+	font-size: xx-small;
+	border-left:  4px solid #CCC; 
 }
