--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Portabily
 Theme URI: http://www.portabily.com
-Author: Sikes & Piedrucci
+Author: A y B
 Author URI: http://www.portabily.com
 */
 
@@ -27,11 +27,16 @@ time, mark, audio, video {
   background:transparent;
 }
 */
+@import url(http://fonts.googleapis.com/css?family=Ubuntu);
+
+img{
+	border:0;
+}
 
 body {
 	
 	margin:0px; padding:0px;
-	font-family:Arial, Helvetica, sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 	color:#7f7d78;
 	font-size:13px;
 	line-height:19px;
@@ -48,23 +53,46 @@ body {
 	}
 	
 .contenedor{
-width:100%;
-margin: 0 auto;
-position:relative;
+	width:100%;
+	margin: 0 auto;
+	position:relative;
 }
 
 
 	
 /*CABECERA*/
+
+.contiene_top{
+	background-color:#424242;
+
+}
+
 .menu-top-container{
 	height:45px;
-	width:1000px;
+	width:500px;
 	margin:0 auto;
+	float: right;
+
+	/*background-color:#00FFFF;*/
+
+}
+
+.cont_search{ /*Contiene caja de busqueda*/
+	height:45px;
+	width:400px;
+	bottom: 0px;
+
+}
+
+.cont_search div{ /*Contiene caja de busqueda*/
+	padding-top: 5px;
 }
 
 #con_menu_top{/*Contenedor del menu top*/
 	height:45px;
 	background-color:#424242;
+	width: 1000px;
+	margin: 0 auto;
 	
 }
 
@@ -92,17 +120,6 @@ ul.list_men_top li {
 }
 
 
-/*ul#list_men_top li#serpa{Separador de item menu top
-	font-family: Arial, Helvetica, sans-serif;
-	background:none;
-	margin-left:2px;
-	margin-right:2px;
-	background-image:url(img/stick.png);
-	background-position:center;
-	background-repeat:no-repeat;
-	
-}*/
-/*Formato de enlaces superior con los padding*/
 ul.list_men_top li a {
 	text-decoration:none;
 	color:#FFF;
@@ -175,19 +192,19 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
 #cont_head{
 	margin:0 auto;
 	height:165px;
-	/*background-color:#999;*/
+	background-color:#FFF;
 	width:100%;
 	}
 	
 #cont_logo_form{
 	margin: 0 auto;
-	width:1000px;
+	width:100%;
 	height:165px;
 	/*background-color:#CCC;*/
 		
 	}
 
-#logo_y_form{
+#seccion_logo_y_form{
 	margin: auto 0; 
 	background-color:#FFF;
 	height:99px;
@@ -204,7 +221,20 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
 	/*background-color:#09F;*/
 		
 	}
-	
+
+.cont_log_form{
+
+	margin: 0 auto;
+	width: 1000px;
+}
+
+._menu_prin{
+
+	margin: 0 auto;
+	width: 1000px;
+}	
+
+
 #cont_barra_sesion{
 	-webkit-border-radius: 5px;
 	border-radius: 5px; 
@@ -222,7 +252,7 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
 	
 #cont_from_sesion span{
 	float:left;
-	font-family:Arial, Helvetica, sans-serif;
+	/*font-family:Arial, Helvetica, sans-serif;*/
 	color:#FFF;
 	font-size:22px;
 	}
@@ -274,12 +304,19 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
 	border-bottom-style:solid;
 	border-bottom-color:#000;
 	border-bottom-width:7px;
+
+}
+
+.cont_search{
+	float: left;
+	margin-top:5px;
+	margin: 0 auto;
 	
-	
-	}
+}
+
 
 #inicio_link{/*Link inicio casita*/
-	background-color:#007DD9;
+	/*background-color:#007DD9;*/
 	background-image:url(img/home.png);
 	background-repeat:no-repeat;
 	background-position: 12px 10px;
@@ -321,7 +358,7 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
 	height:37px;
 	text-align:center;
 	text-decoration:none;
-	font-family:Arial, Helvetica, sans-serif;
+	/*font-family:Arial, Helvetica, sans-serif;*/
 	font-size:14px;
 	color:#FFF;
 	
@@ -339,8 +376,10 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
 	border:none;	
 }
 .entre_seccion{
-		clear:both;
-		height:20px;
+	clear:both;
+	height:auto;
+	background-color: #FFF;
+	padding: 8px;
 }
 
 #conter-pop{
@@ -351,11 +390,10 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
 
 .post_pop{
 	float:left;
-	width:249px;
-	height:289px;
-	background-color:#212121;
-	border-right: 1px solid #FFF;
-
+	width:250px;
+	height:292px;
+	background-color:#EEE;
+	/*border-right: 1px solid #FFF;*/
 }
 
 .contenido_pop_post{
@@ -372,17 +410,17 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
 }
 
 .foot_post_pop{
-	background-color:#007DD9;
+	background-color:#212121;
 	height:75px;
-	padding:4px;
+	padding:6px;
 }
 
 .foot_post_pop a{
 	text-decoration:none;
 	color:#FFF;
-	font-family:Arial, Helvetica, sans-serif;
+	/*font-family:Arial, Helvetica, sans-serif;*/
 	font-size:14px;
-	font-weight:bold;
+	/*font-weight:bold;*/
 }
 
 .foot_post_pop a:hover{
@@ -391,7 +429,7 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
 
 .foot_post_pop p{
 	color:#FFF;
-	font-family:Arial, Helvetica, sans-serif;
+	/*font-family:Arial, Helvetica, sans-serif;*/
 	font-size:small;
 	line-height:14px;
 }
@@ -431,8 +469,58 @@ ul .sprite-sesion a{ background-position: 8px -145px; width: 24px; height: 24px;
     font-family: Georgia,serif;
     margin: 0 0 15px;
     padding: 0 0 5px;
+
 }
 
 
 /*FIN POPULARES*/
 
+.cont_search input[type="text"], input[type="password"], textarea {
+ 
+    background: #f9f9f9;
+    border: 1px solid #cccccc;
+    box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
+    -moz-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
+    -webkit-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
+    padding: 2px;
+    height: 12px;
+}
+
+.cont_search #s {
+	color: #999999;
+	font-family: Arial, sans-serif; 
+	font-size: 13px; 
+	margin: 0 -31px 0 0; 
+	padding: 10px 30px 10px 8px;
+	text-transform: lowercase; 
+	width: 200px;
+ 
+	transition-duration: 400ms;
+	transition-property: width, background;
+	transition-timing-function: ease; 
+	 
+	/* Safari and Chrome */
+	-webkit-transition-duration: 400ms;
+	-webkit-transition-property: width, background;
+	-webkit-transition-timing-function: ease; 
+	 
+	/* Opera */
+	-o-transition-duration:400ms;
+	-o-transition-property: width, background;
+	-o-transition-timing-function: ease; 
+	  
+} 
+
+.cont_search #s:focus {
+	width: 300px;
+} 
+
+.cont_search #searchsubmit {
+	text-indent: -9999px;
+	background-image: url('img/icon_buscar.png'); 
+	border: medium none;
+	height: 24px;
+	width: 24px; 
+	background-color: white; 
+ 
+}
